--- a/src/app/extensions/package.json
+++ b/src/app/extensions/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "dependencies": {
     "@hubspot/ui-extensions": "latest",
-    "react": "^18.2.0",
-    "uuid": "^11.1.0"
+    "react": "^18.2.0"
   }
 }
