--- a/src/app/app.json
+++ b/src/app/app.json
@@ -5,6 +5,8 @@
   "scopes": [
     "crm.objects.deals.read",
     "crm.objects.deals.write",
+    "crm.objects.companies.read",
+    "crm.schemas.companies.read",
     "crm.objects.line_items.read",
     "crm.objects.line_items.write",
     "crm.schemas.line_items.read",
